# libbicycle

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  TODO
cmake/Modules/: FindEigen3.cmake  FindNumPy.cmake
derivation/: benchmark_parameters.py  convertparameters.py  derivation.py  utility.py  wheelassemblygyrostat.py
doc/: CMakeLists.txt  Doxyfile.in  Overview.dox  doxygen.dox  mainpage.dox
doc/latex/: doxygen.sty.in  header.tex.in
examples/: CMakeLists.txt  bicycle_printing.cc  constraint_forces.cc  dependent_speeds.cc  linearized_equations.cc  state_derivatives.cc  stream_output.cc
inc/: CMakeLists.txt  bicycle-inl.h  bicycle.h  bicycle_priv.h  doxygen.dox  wheelassemblygyrostat.h  whipple.h
python_wrapper/: 0-example.cpp  CMakeLists.txt  __init__.py  bicycle_ext.cc  common.cpp  common.hpp  wheelassemblygyrostat_ext.cc  whipple_ext.cc
src/: CMakeLists.txt  bicycle.cc  bicycle_convert_whipple.cc  bicycle_generated.cc  bicycle_interface.cc  bicycle_kinematics.cc  bicycle_linearization.cc  bicycle_numerical.cc  wheelassemblygyrostat.cc
src/tests/: CMakeLists.txt  benchmark_eigenvalues.h  benchmark_steady_turns.h  testEigenvalues.cc  testKinematics.cc  testNormalForces.cc  testWhipple.cc
